# serverless-plugin-rust

./: .eslintrc.js  .gitignore  .package.json.swp  LICENSE  README.md  demo.cast  index.js  index.spec.js  jest.config.js  package-lock.json  package.json
.github/workflows/: build.yml  publish.yml
docs/: examples.md  options.md  providers.md
examples/hello-world/: Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
examples/hello-world/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
examples/hello-world/src/: main.rs
examples/openai-chatgpt/: Cargo.toml
examples/openai-chatgpt/src/: main.rs
examples/workspace/: Cargo.toml  README.md  serverless.yml
examples/workspace/member-one/: Cargo.toml
examples/workspace/member-one/src/: main.rs
examples/workspace/member-two/: Cargo.toml
examples/workspace/member-two/src/: main.rs
src/: index.js
