[package]
name = "member-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.1"
lambda_http = "0.7.0"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros"] }
